tests/parse_print/random_perturb/set01/delete-01/stderr.expected
Error:
    Parser error in file: tests/parse_print/random_perturb/set01/delete-01/delete-01.essence Error is:
ValidatorError tests/parse_print/random_perturb/set01/delete-01/delete-01.essence:1:1:
  |
1 | laguage Essence 1.3
  | ^^^^^^^^^^^^^^^^^^^
Skipped tokens
